added the router

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<!-- app.component.html -->
+
+<router-outlet></router-outlet>
+<!-- 
 <div class="main-page">
   <h1>Welcome to myFlix!</h1>
   <button
@@ -11,4 +15,8 @@
   <button mat-raised-button (click)="openUserLoginDialog()" color="primary">
     Login
   </button>
+  <button mat-raised-button color="primary" (click)="openMoviesDialog()">
+    All Movies
+  </button>
 </div>
+ -->
