--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,19 +1,39 @@
-<!-- movie-card.component.html -->
+<!-- src/app/movie-card/movie-card.component.html -->
+<div class="movie-page">
+  <div class="movie-view">
+    <mat-card *ngFor="let movie of movies" class="movie-card">
+      <mat-toolbar-row>
+        <mat-card-header>
+          <mat-card-title>{{ movie.Title }}</mat-card-title>
 
-<div style="display: flex">
-  <mat-card *ngFor="let movie of movies" style="flex: 1 1 auto">
-    <mat-card-header>
-      <mat-card-title>{{ movie.Title }}</mat-card-title>
-      <mat-card-subtitle
-        >Directed by: {{ movie.Director.Name }}</mat-card-subtitle
-      >
-    </mat-card-header>
-    <img src="{{ movie.ImagePath }}" alt="{{ movie.Title }}" />
-    <mat-card-actions>
-      <button mat-button color="primary">Genre</button>
-      <button mat-button color="primary">Director</button>
-      <button mat-button color="primary">Synopsis</button>
-      <mat-icon>favorite_border</mat-icon>
-    </mat-card-actions>
-  </mat-card>
+          <mat-card-subtitle
+            >Directed by: {{ movie.Director.Name }}</mat-card-subtitle
+          >
+        </mat-card-header>
+      </mat-toolbar-row>
+      <img src="{{ movie.ImagePath }}" alt="{{ movie.Title }}" />
+      <mat-card-actions>
+        <button mat-button color="primary">Genre</button>
+        <button mat-button color="primary">Director</button>
+        <button mat-button color="primary">Synopsis</button>
+        <mat-icon>favorite_border</mat-icon>
+
+        <button
+          mat-icon-button
+          (click)="
+            isFavoriteMovie(movie._id)
+              ? removeFavoriteMovie(movie._id)
+              : addToFavorites(movie._id)
+          "
+          [ngClass]="
+            isFavoriteMovie(movie._id) ? 'mat-flat-button' : 'mat-icon-button'
+          "
+        >
+          <mat-icon>{{
+            isFavoriteMovie(movie._id) ? "favorite" : "favorite_border"
+          }}</mat-icon>
+        </button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
 </div>
