--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,23 +1,32 @@
 <!-- src/app/movie-card/movie-card.component.html -->
 <div class="movie-page">
+  <app-navbar></app-navbar>
   <div class="movie-view">
     <mat-card *ngFor="let movie of movies" class="movie-card">
       <mat-toolbar-row>
         <mat-card-header>
           <mat-card-title>{{ movie.Title }}</mat-card-title>
-
-          <mat-card-subtitle
-            >Directed by: {{ movie.Director.Name }}</mat-card-subtitle
-          >
         </mat-card-header>
       </mat-toolbar-row>
       <img src="{{ movie.ImagePath }}" alt="{{ movie.Title }}" />
       <mat-card-actions>
-        <button mat-button color="primary">Genre</button>
-        <button mat-button color="primary">Director</button>
-        <button mat-button color="primary">Synopsis</button>
-        <mat-icon>favorite_border</mat-icon>
-
+        <button mat-button color="primary" (click)="getGenre(movie.Genre)">
+          Genre
+        </button>
+        <button
+          mat-button
+          color="primary"
+          (click)="getOneDirector(movie.Director)"
+        >
+          Director
+        </button>
+        <button
+          mat-button
+          color="primary"
+          (click)="openMovieDetails(movie.Description)"
+        >
+          Synopsis
+        </button>
         <button
           mat-icon-button
           (click)="
