--- a/src/app/user-login-form/user-login-form.component.html
+++ b/src/app/user-login-form/user-login-form.component.html
@@ -1,6 +1,7 @@
+<!-- src/app/user-registration-form/user-registration-form.component.html -->
 <mat-card>
   <mat-card-header>
-    <mat-card-title>Log In!</mat-card-title>
+    <mat-card-title>Login!</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <form>
@@ -28,7 +29,7 @@
   </mat-card-content>
   <mat-card-actions>
     <button mat-raised-button (click)="loginUser()" color="primary">
-      Log in
+      Login
     </button>
   </mat-card-actions>
 </mat-card>
