--- a/src/app/user-registration-form/user-registration-form.component.html
+++ b/src/app/user-registration-form/user-registration-form.component.html
@@ -47,8 +47,23 @@
     </form>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button (click)="registerUser()" color="primary">
-      Sign Up
+    <button
+      *ngIf="token !== null"
+      mat-raised-button
+      (click)="updateUser()"
+      color="primary"
+      style="margin-bottom: 20px"
+    >
+      {{ data.button }}
+    </button>
+    <button
+      *ngIf="token === null"
+      mat-raised-button
+      (click)="registerUser()"
+      color="primary"
+      style="margin-bottom: 20px"
+    >
+      {{ data.button }}
     </button>
   </mat-card-actions>
 </mat-card>
