--- a/src/app/user-registration-form/user-registration-form.component.html
+++ b/src/app/user-registration-form/user-registration-form.component.html
@@ -1,8 +1,8 @@
 <!-- src/app/user-registration-form/user-registration-form.component.html -->
 <mat-card>
-  <mat-card-header>
-    <mat-card-title>Sign Up!</mat-card-title>
-  </mat-card-header>
+  <mat-card-title style="margin: 20px">
+    {{ data.title }}
+  </mat-card-title>
   <mat-card-content>
     <form>
       <mat-form-field>
